fixed time bug not showing am/pm correctly, navbar spacing, subject change not switching topic

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,10 +10,10 @@
 	color: #6b969d;
 }
 .rw-words-1 span{
-	animation: rotateWordsFirst 12s linear infinite 0s;
+	animation: rotateWordsFirst 8s linear infinite 0s;
 }
 .rw-words-2 span{
-	animation: rotateWordsSecond 12s linear infinite 0s;
+	animation: rotateWordsSecond 8s linear infinite 0s;
 }
 .rw-words span:nth-child(2) { 
 	animation-delay: 2s; 
@@ -45,7 +45,7 @@
 @keyframes rotateWordsSecond {
   0% { opacity: 1; animation-timing-function: ease-in; width: 0px; }
   10% { opacity: 0.3; width: 0px; }
-20% { opacity: 1; width: 100%; }
+	20% { opacity: 1; width: 100%; }
   27% { opacity: 0; width: 100%; }
   100% { opacity: 0; }
 }
